--- a/syncstream/requirements.txt
+++ b/syncstream/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.0.0
-flask-socketio==5.3.5
-python-socketio==5.10.0
-python-engineio==4.8.0
+flask
+flask-socketio
+python-socketio
+python-engineio
+eventlet
+gunicorn
